bugfixes, removed custom claims, refactored storage security, added banlist
-fixed a bug in message alignment when message list isn't full
-fixed scrollbar snapping to bottom of message list
-fixed the security rules for updating users
-fixed a bug preventing checking/unchecking checkboxes/radios
-fixed a bug preventing message background image from showing in the textarea

-removed custom claims because they're basically useless in this app, and replaced them with firestore properties
-refactored storage security rules to disallow direct public access, and made a cloud function for uploading instead
-added banlist

--- a/src/css/chat-room.module.css
+++ b/src/css/chat-room.module.css
@@ -115,7 +115,7 @@ label [type="file"] {
   width: 100%;
 }
 
-.messages-section > :first-child {
+.messages-section > :last-child {
   margin-top: auto;
 }
 
@@ -354,6 +354,8 @@ textarea {
   font-family: sans-serif;
   resize: none;
   background-size: contain;
+  position: relative;
+  z-index: 1;
 }
 
 button {
@@ -429,6 +431,10 @@ li {
   margin: 0px;
   padding: 0px;
   z-index: -1;
+}
+
+.input-wrapper .message-background-image {
+  z-index: 1;
 }
 
 .sample-message-wrapper .message {
